chore: update inventory

--- a/inventory.yaml
+++ b/inventory.yaml
@@ -19,5 +19,9 @@ DEVICE:
         network:
           - 10.10.1.1 0.0.0.248
           - 172.16.1.0 0.0.0.255
-          - 172.16.2.0 0.0.0.255          
+          - 172.16.2.0 0.0.0.255
+
+  - host: 10.10.10.252
+    intConfig:
+      - interface:                   
 
