--- a/inventory.yml
+++ b/inventory.yml
@@ -1,5 +1,7 @@
 DEVICE:
   - host: 10.10.10.251
+    username: admin
+    password: admin
     intConfig:
       - interface: GigabitEthernet3/0
         ipAddress: 172.16.1.1 255.255.255.0
